--- a/src/sections/Appendix.tex
+++ b/src/sections/Appendix.tex
@@ -111,7 +111,8 @@ It is important to calculate $\widehat{A}\widehat{B}f - \widehat{B}\widehat{A}f$
 \ptitle{Angular Momentum Commutators}\label{comm_am_sp}
 \noindent\begin{gather*}
     \left[\widehat{L}_{x},\widehat{L}_{y}\right] =i\hbar \widehat{L}_{z}, \qquad \left[\widehat{L}_{y},\widehat{L}_{z}\right]  =i\hbar \widehat{L}_{x}, \qquad \left[\widehat{L}_{z},\widehat{L}_{x}\right]  =i\hbar \widehat{L}_{y}      \\
-    \left[\widehat{L}^{2},\widehat{L}_{x}\right] = \left[\widehat{L}^{2},\widehat{L}_{y}\right] = \left[\widehat{L}^{2},\widehat{L}_{z}\right] = 0
+    \left[\widehat{L}^{2},\widehat{L}_{x}\right] = \left[\widehat{L}^{2},\widehat{L}_{y}\right] = \left[\widehat{L}^{2},\widehat{L}_{z}\right] = 0\\
+    \left[\widehat{L}^2, \mathbf{L}\right]=0
 \end{gather*}
 
 \subsection{Inner Product}\label{ssec:InnerProd}
