--- a/src/sections/midterm.tex
+++ b/src/sections/midterm.tex
@@ -26,7 +26,7 @@ Observation of an ensemble of identical systems:
     \langle Q(\hat{x},\hat{p})\rangle & = \int_{-\infty}^{\infty}\Psi^*\hat{Q}(\hat{x},\hat{p})\Psi dx = \langle\Psi|\widehat{Q}\Psi\rangle
 \end{align*}
 
-\ptitle{Useful Expectation Values}
+\ptitle{Useful Expectation Values} (Ehrenfest Theorem)
 \noindent\begin{align*}
     \langle p \rangle & = m \frac{d\langle x \rangle}{dt}
 \end{align*}
