added eigenvalue equations for position and momentum

--- a/src/sections/midterm.tex
+++ b/src/sections/midterm.tex
@@ -155,6 +155,10 @@ If $\psi_n$ are solutions to $\hat{Q}\psi_n=q\psi_n$ then
           \noindent\begin{equation*}
               \langle f_m|f_n\rangle=\delta_{mn}
           \end{equation*}
+    \item Eigenvalue equation for \textbf{position}:
+          \noindent\begin{equation*}
+              \widehat{x}g_{x'}= x'g_{x'}\;\Leftrightarrow\; g_{x'}=\delta(x-x')
+          \end{equation*}
 \end{itemize}
 
 \newpar{}
@@ -164,6 +168,10 @@ If $\psi_n$ are solutions to $\hat{Q}\psi_n=q\psi_n$ then
     \item These eigenfunctions with real eigenvalues form a \textbf{complete set} and are \textit{Dirac-orthonormalizable}:
           \noindent\begin{equation*}
               \langle f_{x'}|f_{x''}\rangle=\delta(x''-x')
+          \end{equation*}
+    \item Eigenvalue equation for \textbf{momentum}:
+          \noindent\begin{equation*}
+              \widehat{p}g_{p'}= p'g_{p'}\;\Leftrightarrow\; g_{p'}=\frac{1}{\sqrt{2\pi\hbar}} \exp\left(\frac{ip'x}{\hbar}\right), \quad \lambda = \frac{2\pi\hbar}{p'}
           \end{equation*}
 \end{itemize}
 
@@ -427,7 +435,7 @@ A wavepacket consisting of infinitely many waves has a different \textit{group v
 \end{align*}
 
 \subsection{Harmonic Oscillator}
-Analogon to mechanical frictionless spring and mass system.
+% Analogon to mechanical frictionless spring and mass system.
 \begin{equation*}
     V(x) = \frac{1}{2}k x^2 = \frac{1}{2}m \omega^2 x^2 \qquad \text{with} \quad \omega = \sqrt{\frac{k}{m}}
 \end{equation*}
@@ -472,7 +480,7 @@ Analogon to mechanical frictionless spring and mass system.
 \begin{center}
     \includegraphics[width=.8\linewidth]{harmonic_oscillator.png}
 \end{center}
-
+\newcol{}
 \ptitle{Hermite Polynomial Form} (\textit{Useful Info Sheet})
 
 \noindent\begin{align*}
