Properties of Even and Odd Functions added

--- a/src/sections/midterm.tex
+++ b/src/sections/midterm.tex
@@ -299,6 +299,18 @@ where
     \item If they commute, $Q$ is a conserved quantity.
 \end{itemize}
 
+\subsection{Properties of Even and Odd Functions}
+For functions $f_1, f_2$ (even) and $g_1, g_2$ (odd):
+\newpar{}
+\begin{tabularx}{\linewidth}{@{}XXX@{}}
+    Multiplication         & Addition          & Differentiation \\
+    \midrule{}
+    $f_1\cdot f_2$ is even & $f_1+f_2$ is even & $f'$ is odd     \\
+    $g_1\cdot g_2$ is even & $g_1+g_2$ is odd  & $g'$ is even    \\
+    $f\cdot g$ is odd      &                   &
+\end{tabularx}
+
+
 \newcol{}
 \section{Schroedinger Equation}
 \noindent\begin{equation*}
