remark on spin/angular momentum

--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -747,6 +747,7 @@ In contrast to angular momentum of a QM particle where $l$ could take arbitrary 
 \ptitle{Remarks}
 
 \begin{itemize}
+    \item The set value for $\mathbf{s}$ and the fact that one cannot write mathematical formulae for $f_{s}^{m_s}$ distinguishes spin from angular momentum.
     \item For electrons we have $s=\frac{1}{2}$, for photons $s=1$
     \item Electrons have
           \begin{itemize}
