--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -846,3 +846,43 @@ and are in z-axis basis given by the \textbf{non-hermitian} matrices
 
 \subsection{Two-Particle Systems}
 
+\subsubsection{Properties Two-Particle Systems}
+
+\ptitle{Similarities to One-Particle Systems}
+
+\ptitle{Differences to One-Particle Systems}
+
+\subsubsection{Multi-Particle Systems}
+
+\subsubsection{Reduceable Two-Particle Problems}
+
+\ptitle{1. Central Potential Systems}
+
+\ptitle{2. Noninteracting Particles}
+
+\subsubsection{Noninteracting Particles}
+
+\ptitle{Distinguishable Particles}
+
+Remember: the examples hold for noninteracting particles
+
+\ptitle{Indistinguishable Particles}
+
+\paragraph{Exchange Symmetry}
+\ptitle{Exchange Operator}
+
+\ptitle{Exchange Symmetry of Noninteracting Particles}
+
+\paragraph{Bosons and Fermions}
+
+\ptitle{Pauli Exclusion Principle}
+
+\paragraph{Triplet and Singlet States}
+
+
+
+
+
+
+
+
