--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -859,34 +859,116 @@ Again, we assume that $V$ is time-independent.
 
 \ptitle{Differences to One-Particle Systems}
 \begin{itemize}
-    \item $\Psi(\mathbf{r_1},\mathbf{r_2},t)$ i.e.\ function of position of two particles
-    \item $\hat{H}$ is given by 
-    \begin{equation*}
-        \hat{H}=-\frac{\hbar^{2}}{2m_{1}}\nabla_{1}^{2}-\frac{\hbar^{2}}{2m_{2}}\nabla_{2}^{2}+V(\mathbf{r}_{1},\mathbf{r}_{2},t)
-    \end{equation*}
-    where $V$ includes any interactions between particles i.e.:
-    \begin{enumerate}
-        \item interactions between  electrons
-        \item interactions with the nucleus
-    \end{enumerate}
+    \item $\Psi(\mathbf{r_1},\mathbf{r_2},t)$ is a function of position of both particles
+    \item $\hat{H}$ is given by
+          \begin{equation*}
+              \hat{H}=-\frac{\hbar^{2}}{2m_{1}}\nabla_{1}^{2}-\frac{\hbar^{2}}{2m_{2}}\nabla_{2}^{2}+V(\mathbf{r}_{1},\mathbf{r}_{2},t)
+          \end{equation*}
+          where $V$ includes any interactions between particles i.e.:
+          \begin{enumerate}
+              \item interactions between  electrons
+              \item interactions of electrons with the nucleus
+          \end{enumerate}
+    \item The term
+          \begin{equation*}
+              |\Psi(\mathbf{r}_{1},\mathbf{r}_{2},t)|^{2} d^{3}\mathbf{r}_{1} d^{3}\mathbf{r}_{2}
+          \end{equation*}
+          describes the probability of finding particle 1 in volume $d^{3}\mathbf{r}_{1}$, particle 2 in volume $d^{3}\mathbf{r}_{2}$
 \end{itemize}
 
-\subsubsection{Multi-Particle Systems}
+\subsubsection{Z-Particle Systems}
+In a general multi-particle system (e.g.\ atom with $Z$ protons) the Hamiltonian is given by
+\begin{align*}
+    \hat{H} = & \underbrace{\sum_{j=1}^{Z}\left\{-\frac{\hbar^{2}}{2m}\nabla_{j}^{2}-\left(\frac{1}{4\pi \epsilon_{0}}\right)\frac{Ze^{2}}{r_{j}}\right\}}_{T\text{ and interaction with nucleus}} \\
+    +         & \underbrace{\frac{1}{2}\left(\frac{1}{4\pi \epsilon_{0}}\right)\sum_{j\neq k}^{Z}\frac{e^{2}}{\left|\mathbf{r}_{j}-\mathbf{r}_{k}\right|}}_{\text{repulsive int.\ of electrons}}
+\end{align*}
+where in the ``repulsion'' term
+\begin{itemize}
+    \item the interaction between electrons $j,k$ is described
+    \item $\frac{1}{2}$ avoids double counting due to permuting $j,k$
+\end{itemize}
+The ``repulsion'' term makes exact solving of the TISE, in general, impossible. An approximation and an exception are presented hereafter.
 
 \subsubsection{Reduceable Two-Particle Problems}
+In two special cases the TISE of two-particle systems can be solved analytically.
 
 \ptitle{1. Noninteracting Particles}
 
+\begin{itemize}
+    \item Corresponds to ignoring the ``repulsion'' term in $\hat{H}$ of the Z-particle system
+    \item Assume e.g.\ electrons only interact with nucleus but not each other (simplest but most inaccurate approximation)
+    \item Each electron in single particle hydrogenic state: $\psi_{n,l,m_l,m_s}$
+    \item See~\ref*{NIP} for details
+\end{itemize}
+
 \ptitle{2. Central Potential Systems}
 
-\subsubsection{Noninteracting Particles}
-As a coarse approximation we ignore the ``repulsion'' term from the n-particle TISE to neglect all electron-electron interactions.
+Given a system where the particles interact only with each other via a potential that depends on their separation
+\begin{equation*}
+    V(\mathbf{r}_1,\mathbf{r}_2)\to V(|\mathbf{r}_1-\mathbf{r}_2|)
+\end{equation*}
+we can solve the two-particle TISE analytically by splitting the problem into center-of-mass motion
+\begin{align*}
+    R\equiv & \frac{m_1\mathbf{r_1}+m_2\mathbf{r_2}}{m_1+m_2} & \text{ center of mass} \\
+    M\equiv & m_1 + m_2                                       & \text{ total mass}
+\end{align*}
+and relative motion of the two particles
+\begin{align*}
+    \mathbf{r}\equiv & \mathbf{r_1}-\mathbf{r_2} &                      \\
+    m_r\equiv        & \frac{m_1 m_2}{m_1+m_2}   & \text{ reduced mass}
+\end{align*}
+In this case, the TISE separates to
+\begin{equation*}
+    -\frac{\hbar^{2}}{2\left(m_{1}+m_{2}\right)}\nabla_{R}^{2}\psi-\frac{\hbar^{2}}{2\mu}\nabla_{r}^{2}\psi+V(\mathbf{r})\psi=E\psi
+\end{equation*}
+and we can find a solution
+\begin{equation*}
+    \psi = \psi_R(\mathbf{R})\cdot\psi_r(\mathbf{r})
+\end{equation*}
+Remarks:
+\begin{itemize}
+    \item Works only for 2-particle system
+    \item For the H-atom we calculated $\psi_r(\mathbf{r})$ and assumed $m_r\approx m_e$ (plug it into $m_r$ to see why)
+\end{itemize}
+
+\subsubsection{Noninteracting Particles}\label{ssec:NIP}
+As a coarse approximation we ignore the ``repulsion'' term from the n-particle TISE to neglect all electron-electron interactions. Then, for two given single-particle solutions $\psi_a$ and $\psi_b$ one differenciates between the following two cases.
 
 \ptitle{Distinguishable Particles}
 
-Remember: the examples hold for noninteracting particles
+The overall solutions are products
+\begin{equation*}
+    \psi(\mathbf{r}_{1},\mathbf{r}_{2})=\psi_{a}(\mathbf{r}_{1})\psi_{b}(\mathbf{r}_{2})
+\end{equation*}
+or
+\begin{equation*}
+    \psi(\mathbf{r}_{1},\mathbf{r}_{2})=\psi_{b}(\mathbf{r}_{1})\psi_{a}(\mathbf{r}_{2})
+\end{equation*}
+where
+\begin{itemize}
+    \item $\psi(\mathbf{r}_{1},\mathbf{r}_{2})$ is the overall, 2-particle wave function
+    \item $\psi_{a}(\mathbf{r}_{1})$ means particle $1$ is in state $\psi_{a}$
+    \item $\psi_{a}(\mathbf{r}_{2})$ means particle $2$ is in state $\psi_{a}$
+    \item and the similar approach holds for $\psi_{b}$
+\end{itemize}
 
 \ptitle{Indistinguishable Particles}
+
+For the case of e.g.\ two electrons (which are indistinguishable) the overall 2-particle wave function is a \textbf{linear combination} of the aforementioned products:
+
+\begin{equation*}
+    \psi_{+}(\mathbf{r}_{1},\mathbf{r}_{2})=C\left[\psi_{a}(\mathbf{r}_{1})\psi_{b}(\mathbf{r}_{2})+\psi_{b}(\mathbf{r}_{1})\psi_{a}(\mathbf{r}_{2})\right]
+\end{equation*}
+or
+\begin{equation*}
+    \psi_{-}(\mathbf{r}_{1},\mathbf{r}_{2})=C\left[\psi_{a}(\mathbf{r}_{1})\psi_{b}(\mathbf{r}_{2})-\psi_{b}(\mathbf{r}_{1})\psi_{a}(\mathbf{r}_{2})\right]
+\end{equation*}
+Remarks
+\begin{itemize}
+    \item Indistinguishable means that there is no way to  tell the two particles approximation
+    \item $\psi_{+}$ stays exactly the same when swapping $\mathbf{r_1},\mathbf{r_2}$
+    \item $\psi_{-}$ changes sign when swapping $\mathbf{r_1},\mathbf{r_2}$
+\end{itemize}
 
 \paragraph{Exchange Symmetry}
 \ptitle{Exchange Operator}
